Implementata intelligenza artificiale.. sembrerebbe funzionare.. ancora da testare in auto

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>import android.content.Intent;
-        <activity android:name=".SetActivity"></activity>
+        </activity>
     </application>
 
 </manifest>
